--- a/style/login.css
+++ b/style/login.css
@@ -56,10 +56,16 @@ h1 {
   margin-right: 22px;
 }
 
-.loginNewUserContainer {
+.loginNewUserWrapper {
   display: flex;
   align-items: center;
+  font-size: 20px;
+  line-height: 120%;
   gap: 16px;
+}
+
+.loginNewUserWrapper .ButtonBlueFilled {
+  padding: 16px;
 }
 
 .loginCard {
@@ -77,10 +83,14 @@ h1 {
   box-shadow: 0px 0px 14px 3px #0000000a;
 }
 
-.loginButtons {
+.loginButtonsWrapper {
   display: flex;
   justify-content: center;
   gap: 35px;
+}
+
+.loginCard .ButtonBlueFilled {
+  padding: 12px 24px;
 }
 
 .loginInputs {
@@ -98,6 +108,8 @@ h1 {
   width: 246px;
   height: 36px;
   text-align: center;
+  line-height: 120%;
+  font-size: 16px;
 }
 
 .loginFooterLink {
