--- a/style/add-Task.css
+++ b/style/add-Task.css
@@ -88,6 +88,7 @@ h2 {
   padding-left: 18px;
   padding-top: 11px;
   cursor: pointer;
+  font-family: "Inter", sans-serif;
 }
 
 .taskDescriptionContainer textarea:focus {
@@ -119,6 +120,7 @@ h2 {
   left: 16px;
   height: 48px;
   cursor: pointer;
+  font-family: "Inter", sans-serif;
 }
 
 .addTaskDateContainer input:focus {
@@ -182,22 +184,16 @@ h1 {
   align-items: center;
   justify-content: center;
   gap: 10px;
-
   width: 139px;
   height: 51px;
-
   background-color: white;
   border: 1px solid rgba(209, 209, 209, 1);
   border-radius: 10px;
-
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 400;
   font-family: "Inter", sans-serif;
-
   cursor: pointer;
-  transition:
-    box-shadow 0.1s,
-    transform 0.1s;
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
 }
 
 .priorityButton:hover {
@@ -205,7 +201,7 @@ h1 {
 }
 
 .priorityButton.urgent.active {
-  background-color: #ff2020;
+  background-color: #ff3d00;
   color: white;
 }
 
@@ -215,7 +211,7 @@ h1 {
 }
 
 .priorityButton.low.active {
-  background-color: #00cf00;
+  background-color: #7ae229;
   color: white;
 }
 
@@ -288,11 +284,13 @@ h1 {
   border: 1px solid;
   border-color: rgba(42, 54, 71, 1);
   background-color: rgba(246, 247, 248, 1);
-  /* gap: 4px; */
   font-size: 20px;
   line-height: 1.2;
   font-weight: 400;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .createButton {
   width: 183px;
@@ -394,7 +392,7 @@ h1 {
 .subTaskEditIcons {
   display: flex;
   position: relative;
-  right: 10%;
+  right: 13%;
   gap: 5px;
   cursor: pointer;
 }
@@ -475,6 +473,17 @@ h1 {
 
 .dropDownArrow {
   height: 7px;
+}
+
+.subTaskList {
+  padding-right: 20px;
+}
+.choiceContact {
+  padding-left: 9px;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.2;
 }
 
 .taskArrow {
