--- a/style/standard.css
+++ b/style/standard.css
@@ -13,6 +13,8 @@
   --GlobalBorderColorGray: #a8a8a8;
   --GlobalInputGray: #D1D1D1;
   --GlobalBlack: #000000;
+  --GlobalErrorRed: #E60026;
+
 ;
 
   /* Task*/
@@ -141,7 +143,10 @@ h3 {
   border-radius: 8px;
   padding-left: 16px;
   font-size: 20px;
+}
 
+.InputFieldError {
+  border: 1px solid var(--GlobalErrorRed);
 }
 
 .InputField::placeholder {
@@ -155,7 +160,6 @@ h3 {
   border: 1px solid var(--GlobalLightBlue);
 } 
 
-
 .InputFieldIcon {
   position: absolute;
   top: 50%;
@@ -165,10 +169,12 @@ h3 {
 }
 
 .InputErrorText {
-  color: red;
+  color: var(--GlobalErrorRed);
   text-align: center;
   display: block;
 }
+
+
 
 /** Buttons*/
 
@@ -245,6 +251,14 @@ h3 {
   outline: none;
   box-shadow: 0px 4px 4px 0px #00000040;
 }
+
+.ButtonBlueFilled:disabled {
+  opacity: 0.5;
+  cursor: not-allowed; 
+  pointer-events: none;
+}
+
+
 
 /*
  * Component: Circle Badge (Avatar/Initials)
