--- a/style/add-Task.css
+++ b/style/add-Task.css
@@ -4,8 +4,8 @@ body {
 }
 main {
   max-width: 1200px; /* PC-Größe */
-  margin: 170px auto 0 auto;
-  padding: 0 24px;
+  margin: 190px auto 0 auto;
+  margin-left: 365px;
 }
 .addTaskLabel {
   display: flex;
@@ -17,13 +17,13 @@ main {
 form {
   position: relative;
 }
-h1 {
+.mainTitle {
   color: rgba(0, 0, 0, 1);
   font-size: 61px;
   font-weight: 700;
   font-family: "Inter", sans-serif;
   line-height: 1.2;
-  margin: 0;
+  margin-bottom: 50px;
 }
 h2 {
   font-size: 20px;
@@ -49,6 +49,7 @@ h2 {
   justify-content: center;
   gap: 8px;
 }
+
 .taskName {
   font-weight: 400;
   height: 34px;
@@ -157,7 +158,7 @@ h2 {
   color: rgba(230, 0, 38, 1); /* sichtbar wenn Klasse .visible */
 }
 
-.contentWrapper {
+.contentWrapperAddTask {
   display: flex;
   gap: 48px;
 }
@@ -270,8 +271,8 @@ h1 {
 .buttonRequiredField {
   display: flex;
   justify-content: space-between;
-  width: 1120px;
-  margin-top: 129px;
+  width: 1000px;
+  margin-top: 80px;
 }
 .requiredBottomLeft {
   display: flex;
@@ -532,8 +533,19 @@ select::-ms-expand {
 .eventImg {
   position: relative;
   right: 40px;
+  top: 3px;
 }
-@media (max-width: 1100px) {
+
+.addTask textarea,
+.addTask input,
+.addTask select {
+    border: unset; /* entfernt alles vom Standard */
+    border-radius: 10px; /* eigene Form */
+    border: 1px solid rgba(209,209,209,1); /* deine eigene Farbe */
+}
+
+
+@media (max-width: 1502px) {
   .contentWrapper {
     flex-direction: column;
   }
@@ -571,7 +583,7 @@ select::-ms-expand {
   }
 }
 
-@media (max-width: 1040px) {
+@media (max-width: 1370px) {
   .taskDescriptionContainer textarea {
     width: 930px;
   }
@@ -599,7 +611,7 @@ select::-ms-expand {
     gap: 181px;
   }
 }
-@media (max-width: 1000px) {
+@media (max-width: 1329px) {
   .taskNameContainer textarea {
     width: 800px;
   }
@@ -624,7 +636,7 @@ select::-ms-expand {
     margin-top: 40px;
   }
 }
-@media (max-width: 872px) {
+@media (max-width: 1195px) {
   .taskNameContainer textarea {
     width: 640px;
   }
@@ -651,7 +663,7 @@ select::-ms-expand {
     margin-top: 10px;
   }
 }
-@media (max-width: 720px) {
+@media (max-width: 1035px) {
   h1 {
     font-size: 50px;
   }
@@ -686,7 +698,7 @@ select::-ms-expand {
     font-size: 18px;
   }
 }
-@media (max-width: 542px) {
+@media (max-width: 870px) {
   h1 {
     font-size: 47px;
   }
