--- a/style/board.css
+++ b/style/board.css
@@ -135,7 +135,6 @@ body {
 }
 
 .boardTaskCatagory {
-    background-color: var(--taskLightBlue);
     color: var(--GlobalWhite);
     padding: 4px 16px 4px 16px;
     border-radius: 8px;
@@ -147,6 +146,14 @@ body {
     display: inline-block;
     width: fit-content;
     margin: 10px 10px 10px;
+}
+
+.boardTaskCatagoryBlue{
+    background-color: var(--taskLightBlue);
+}
+
+.boardTaskCatagoryGreen{
+    background-color: #1FD7C1;
 }
 
 .marginleft10px{
