--- a/style/board.css
+++ b/style/board.css
@@ -80,7 +80,7 @@ body {
 }
 
 .tablecontainer td .taskContainer {
-    height: 215px;
+    /* height: 215px; */
     width: 252px;
     border: 2px solid black;
     border-radius: 24px;
@@ -123,19 +123,11 @@ body {
     color: var(--GlobalBorderColorGray) !important;
 }
 
-.rotate5deg {
-    transform: rotate(5deg);
-}
-
 .noTaskFound {
     display: flex;
     justify-content: center;
     align-items: center;
     width: var(--boardWith);
-}
-
-.displayNone {
-    display: none !important;
 }
 
 .boardTaskCatagory {
@@ -158,10 +150,6 @@ body {
 
 .boardTaskCatagoryGreen{
     background-color: #1FD7C1;
-}
-
-.marginleft10px{
-    margin-left: 10px;
 }
 
 .boardTaskContent{
