--- a/style/standard.css
+++ b/style/standard.css
@@ -424,3 +424,27 @@ h3 {
   justify-content: space-between;
   align-items: center;
 }
+
+.paddingBottom5{
+    padding-bottom: 5px;
+}
+
+.paddingBottom15{
+    padding-bottom: 15px;
+}
+
+.paddingTop15{
+    padding-top: 15px;
+}
+
+.displayNone {
+    display: none !important;
+}
+
+.rotate5deg {
+    transform: rotate(5deg);
+}
+
+.marginleft10px{
+    margin-left: 10px;
+}
