--- a/style/board.css
+++ b/style/board.css
@@ -84,7 +84,7 @@ body {
     width: 252px;
     border-radius: 24px;
     margin-top: 5px;
-    box-shadow: 1px 1px 8px -1px rgba(0,0,0,0.54);
+    box-shadow: 1px 1px 8px -3px rgba(0,0,0,0.28);
 }
 
 .task:hover {
@@ -107,14 +107,14 @@ body {
 .highlightTask {
     height: 215px;
     width: 252px;
-    border: 1px dotted var(--GlobalBorderColorGray);
+    border: 1px dashed var(--GlobalBorderColorGray);
     border-radius: 30px;
     margin-top: 5px;
 }
 
 .noTaskField {
     border-radius: 10px !important;
-    border: 1px dotted var(--GlobalBorderColorGray) !important;
+    border: 1px dashed var(--GlobalBorderColorGray) !important;
     height: 48px !important;
     display: flex !important;
     align-items: center !important;
